--- a/template2.html
+++ b/template2.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
+        <style>
+            .anchor {
+                color: red;
+            }
+        </style>
     </head>
     <body>
         <h1 id="main_header">This is page for task2</h1>
@@ -30,6 +35,6 @@
                 quisquam sint temporibus.</p>
         </div>
 
-
+<script src="js2.js"></script>
     </body>
 </html>
